# HiggsStudies

./: CMakeLists.txt
Analysis/: CMakeLists.txt  test.C
Analysis/exec/: categorize.cxx  higgsAnalysis.cxx  plots.cxx  preCut.cxx
Analysis/include/: ChannelInfo.h  Cuts.h  Event.h  Process.h
Analysis/src/: Event.cpp  Process.cpp
include/: EventShape.h  HiggsProcessor.h  ISR.h  Jet.h  Minimisation.h  Particle.h
script/: HiggsProcessor.py
src/: EventShape.cc  HiggsProcessor.cc  ISR.cc  Jet.cc  Minimisation.cc  Particle.cc  toto.cxx
